<resources>
    <string name="app_name">SwiftReader</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="latest">Latest</string>

    <string name="lorem_ipsum">
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="camera">Camera</string>
    <string name="actionButton">Action Button</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="error_google_login">Google authentication failed</string>
    <string name="save">Save</string>
</resources>